--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -47,6 +47,8 @@ $mq-lg: 'screen and (min-width: #{$screen-lg})';
 $bg-color-1: #535353;
 $bg-color-2: #333333;
 
+$button-color: #f15454;
+
 $text-color-1: #cccccc;
 $text-color-2: #5a5a5a;
 $text-color-3: #999999;
