--- a/src/components/ComicsList/ComicsList.scss
+++ b/src/components/ComicsList/ComicsList.scss
@@ -6,6 +6,13 @@
     flex-direction: column;
   }
   &__col {
-    max-width: 20%;
+    margin-bottom: 50px;
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+    @media #{$mq-md} {
+      max-width: 20%;
+      margin-bottom: unset;
+    }
   }
 }
