--- a/src/containers/ComicDetails/ComicDetails.scss
+++ b/src/containers/ComicDetails/ComicDetails.scss
@@ -5,18 +5,29 @@
   min-height: $full-height;
   &__comicWrapper {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     margin-bottom: 70px;
+    @media #{$mq-md} {
+      flex-flow: row;
+      flex-direction: row;
+    }
   }
   &__image {
     margin-right: 25px;
+    margin-bottom: 40px;
+
     img {
-      width: 340px;
+      width: 200px;
+      @media #{$mq-md} {
+        width: 340px;
+        margin-bottom: 0;
+      }
     }
   }
   &__name {
     display: flex;
     flex-flow: row wrap;
+
     h1 {
       font-size: 32px;
       line-height: 37px;
@@ -29,9 +40,13 @@
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    margin-top: 10px;
+    @media #{$mq-md} {
+      margin-top: 0;
+    }
     img {
-      width: 25px;
-      height: 25px;
+      width: 30px;
+      height: auto;
     }
   }
   &__info {
